fix #11 hide overflow of long url

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@ body {
     background-color: #f5f0d9;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 
 // adds all the styling to the navbar
 .nav {
@@ -91,7 +95,8 @@ body {
             display: inline-block;
             vertical-align: top;
             padding: 3px;
-            min-width: 49%;
+            width: 49%;
+            overflow: hidden;
             
             h4 {
                 text-align: center;
@@ -107,6 +112,7 @@ body {
                 margin-bottom: 2px;
                 border-radius: 3px;
                 background-color: #f7b292;
+                overflow-x: auto;
                 
                 a {
                     color: #7b2e00;
@@ -138,12 +144,13 @@ body {
         .topic {
             display: inline-block;
             vertical-align: top;
-            min-width: 30%;
+            width: 31%;
             margin: 4px;
             text-align: center;
             padding-bottom: 2px;
             border-radius: 3px;
             background-color: #f7b292;
+            overflow-x: auto;
             
             a {
                 color: #7b2e00;
@@ -185,6 +192,7 @@ body {
             margin-bottom: 4px;
             border-radius: 3px;
             background-color: #f7b292;
+            overflow-x: auto;
             
             a {
                 color: #7b2e00;
@@ -238,14 +246,16 @@ body {
         border-top: 1px solid white;
         border-radius: 4px;
         box-shadow: 4px 5px 7px grey;
+        overflow: hidden;
         
         .bookmark {
             display: inline-block;
-            min-width: 49%;
+            width: 49%;
             padding: 2px;
             margin: 2px;
             border-radius: 3px;
             background-color: #f7b292;
+            overflow-x: auto;
             
             a {
                 color: #7b2e00;
